[project]
name = "dag-api-test-framework"
version = "0.1.0"
description = "Pytest API automation framework for dag-docker-sim-java"
requires-python = ">=3.10"
dependencies = [
    "pytest>=8.0",
    "requests>=2.31",
    "PyYAML>=6.0",
    "allure-pytest>=2.13",
    "pymysql>=1.1",
    "redis>=5.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["base*", "common*", "conf*", "data*", "testcase*"]
exclude = ["logs*", "report*"]

[tool.pytest.ini_options]
testpaths = ["testcase"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "api: normal API regression cases",
    "business: ordered business scenario cases",
    "concurrency: concurrent API stability cases",
]
addopts = "-v -s"
filterwarnings = [
    "ignore::UserWarning",
]
